Fix stackoverflow formatting

--- a/styles/popup.css
+++ b/styles/popup.css
@@ -189,7 +189,7 @@ body {
 }
 
 .resultWrapper {
-  margin-bottom: 80px;
+  padding-bottom: 105px;
 }
 
 .resultWrapper > * {
@@ -205,6 +205,7 @@ body {
   box-sizing: border-box;
   box-shadow: 0 3px 2px rgba(0, 0, 0, 0.25);
   padding: 10px;
+  position: relative;
 }
 
 .resultContent {
@@ -267,4 +268,17 @@ body {
 #heart {
   color: #e25555;
   /*color: #EEAE23;*/
+}
+
+.source {
+  position: absolute;
+
+  bottom: 0;
+  right: 20px;
+  color: #555;
+}
+
+.answer > * {
+  margin: 0;
+
 }
